Fix align-items and height/width in persona

--- a/persona.css
+++ b/persona.css
@@ -37,6 +37,7 @@ section{
     flex-direction: column;
     justify-content: space-between;
     row-gap: 20px;
+    align-items: center;
 }
 figure{
     margin-top: -2dvh;
@@ -105,7 +106,7 @@ td{
 }
 .skill-ratings li  p{
     width: 130px;
-    text-align: right;
+    text-align: center;
 }
 .rating-stars{
     display: flex;
@@ -126,19 +127,33 @@ td{
 
 @media screen and (max-width: 2000px){
     :root{
-        --section-height: 38dvh;
+        --section-height: 33dvh;
+        --section-width: 25dvw;
+    }
+    figure img{
+        width: calc(var(--section-width) - 50px);
+    }
+}
+@media screen and (max-width: 1500px){
+
+    .skill-ratings li{
+        margin-left: -20px;
     }
     figure img{
         width: var(--section-width);
     }
+   
 }
-@media screen and (max-width: 1500px){
+@media screen and (max-width: 1400px){
+
     :root{
-        --section-width: 25dvw;
-        --section-height: 50dvh;
+        --section-height: 37.5dvh;
     }
     .skill-ratings li{
         margin-left: -20px;
+    }
+    figure img{
+        height: var(--section-width);
     }
    
 }
